# fourinsight-engineroom-utils-python

./: .gitignore  DEVELOPERS.md  README.md  Untitled.ipynb  build.bat  dev-requirements.txt  setup.cfg  tox-deploy.ini  tox.ini
.deploy/: upload_doc_to_azure.bat
.github/: pull_request_template.md
.github/workflows/: cd-test.yaml  cd-test.yml  cd.yml  ci.yaml  deploy_public.yml  hello.yml  my.yaml
docs/: api.rst  basic_usage.rst  conf.py  cookbook.rst  getting_started.rst  index.rst  release_notes.rst  support.rst
docs/api_ref/: core.rst  datamanage.rst  datasource.rst  handlers.rst  index.rst  indexconverters.rst  iter_index.rst  module_a.rst  module_b.rst  persistent_dict.rst  persistent_json.rst  persistentdict.rst  result_collector.rst  resultcollector.rst
docs/api_ref/data_source/: base_data_source.rst  composite_data_source.rst  drio_data_source.rst  index.rst  null_data_source.rst
docs/api_ref/handlers/: azure_blob_handler.rst  base_handler.rst  index.rst  local_file_handler.rst  null_handler.rst
docs/api_ref/index_converters/: base_index_converter.rst  datetime_index_converter.rst  float_index_converter.rst  index.rst  integer_index_converter.rst
docs/other/: index.rst
docs/user_guide/: advanced_app.rst  index.rst  simple_app.rst  topic_a.rst  topic_b.rst
docs/user_guide/basic_concepts/: collect_results.rst  data_source.rst  (+3 more)
old_docs/: api.rst
tests/: test_core.py  test_datamanage.py  test_import.py  test_iter_index.py
tests/testdata/: a_test_file.json  drio_sdk_usage_mod.csv  drio_sdk_usage_mod2.csv  results_auto.csv  results_timestamp.csv
(+22 files in other folders)
