[metadata]
name = fourinsight-engineroom-utils
version = attr: package.__version__
author = 4Subsea
author_email = support@4subsea.com
description = Python boilerplate and utilites for 4Insight EngineRoom app development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://4insight.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.7
