[metadata]
name = fourinsight-engineroom-utils
version = attr: fourinsight.engineroom.utils.__version__
author = 4Subsea
author_email = support@4subsea.com
description = Python boilerplate and utilites for 4Insight EngineRoom app development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://4insight.io/
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    pandas
    azure-storage-blob >= 12.4.0
    pyarrow
    numpy
    fourinsight-api

[options.packages.find]
include =
    fourinsight.engineroom.utils
    fourinsight.engineroom.utils.*
